chore: add tf plan

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,15 @@
     <body>
         <p>aaaaa Olá.</p>
         <p>Bem vindo !!!!!!!!</p>
-                <p></p>
+        <p></p>
+        <p>Aqui você irá:</p>
+        <ul>
+        <li>aprender</li>
+        <li>colaborar</li>
+        <li>compartilhar</li>
+        <li>e muito mais ...</li>
+        </ul>
+        <p></p>
+        <p><b>wilson calixto</b><br /><a href="https://www.linkedin.com/in/wilson-calixto/">https://www.linkedin.com/in/wilson-calixto/</a></p>        <p></p>
     </body>
 </html>
